Converted a ton of sounds over to using the modern falloff function, instead of playing straight without stereo panning.

--- a/data/objects/effects/puffs/explosion_big_recurring.cfg
+++ b/data/objects/effects/puffs/explosion_big_recurring.cfg
@@ -1,8 +1,9 @@
 {
 id: "explosion_big_recurring",
+prototype: ["standard_values"],
 dies_on_inactive: true,
 zorder: "@include data/zorder.cfg:near_player_foreground_effects",
-on_create: "map(range(5), schedule(value*10,[spawn('explosion_big',  midpoint_x + 1d50 - 1d50, midpoint_y + 1d70 - 1d70, -facing),sound('BombExplode.wav')]))",
+on_create: "map(range(5), schedule(value*10,[spawn('explosion_big',  midpoint_x + 1d50 - 1d50, midpoint_y + 1d70 - 1d70, -facing),play_sound__falloff('BombExplode.wav')]))",
 
 on_end_anim: "die()",
 animation: {
