--- a/data/objects/enemies/animals/finch.cfg
+++ b/data/objects/enemies/animals/finch.cfg
@@ -21,7 +21,7 @@ properties: {
 	sine_magnitude: "abs(_desired_height - _magnitude)",
 	converge: "def(decimal value, decimal target) -> commands add(rotate, decimal(target-value)/30.0)",
 	points_value: 14,
-	play_object_specific_pain_vocalization: "def(DamageType damage_type, damage_amount) -> commands if(damage_type = enum neutral, sound('elegant-bird.wav'))",
+	play_object_specific_pain_vocalization: "def(DamageType damage_type, damage_amount) -> commands if(damage_type = enum neutral, play_sound__falloff('elegant-bird.wav'))",
 
 	affects_ethereal_block_triggers: "false",
 	turns_away_from_solid_obstructions: "false", 
