--- a/data/objects/enemies/bosses/airplane_boss.cfg
+++ b/data/objects/enemies/bosses/airplane_boss.cfg
@@ -72,7 +72,7 @@ on_process: "[	pan_engine_sounds,
 				if(_heights_index != the_low_swoop, set(accel_x, 8), set(accel_x, 16)),
 
 	         if((not alive) and (cycle%10 =1),
-	             [spawn('explosion_big',  mid_x + 1d50 - 1d50, mid_y + 1d70 - 1d70, {facing:-facing, rotate: -45}),sound('BombExplode.wav')]),
+	             [spawn('explosion_big',  mid_x + 1d50 - 1d50, mid_y + 1d70 - 1d70, {facing:-facing, rotate: -45}),play_sound__falloff('BombExplode.wav')]),
 	
 	               if((facing < 0 and x < _left_bound or facing > 0 and x > _right_bound),
 	               [set(_strafing, -1), facing(-facing), set(_pilot.facing, -facing), set(_propeller.facing, -facing), animation('fly'), set(velocity_x, 0),
@@ -86,10 +86,10 @@ on_timer: "[
 					[switch(1d2,
 						1, spawn('${type}.dud_bomb', mid_x, mid_y+40, facing, [set(child.velocity_x, velocity_x/3)]),
 						2, spawn('${type}.bomb', mid_x, mid_y+40, facing, [set(child.velocity_x, velocity_x/3)]) )
-					,sound('MissileDrop.wav')]),
+					,play_sound__falloff('MissileDrop.wav')]),
 	          	if(_heights_index = the_mine_swoop,
 	          			if(level.cycle - _last_dropped_mine > 150,
-						[spawn('${type}.mine', mid_x, mid_y+40, facing, [set(child.velocity_x, velocity_x/3)]), sound('MissileDrop.wav'), set(_last_dropped_mine, level.cycle)])
+						[spawn('${type}.mine', mid_x, mid_y+40, facing, [set(child.velocity_x, velocity_x/3)]), play_sound__falloff('MissileDrop.wav'), set(_last_dropped_mine, level.cycle)])
 				)
 					],
 				if(_strafing = -1 and (level.player.mid_x - mid_x)*facing < (200 + (level.player.y - y)), [set(_strafing, 8)])))
@@ -195,7 +195,7 @@ object_type: [
 
 			death_effects: "def(string type) -> commands [
 				spawn('explosion_big',mid_x,mid_y,facing),
-				sound('BombExplode.wav'),
+				play_sound__falloff('BombExplode.wav'),
 				spawn('explosion_spark_bright',mid_x,mid_y,facing)
 			]",
 
@@ -362,7 +362,7 @@ object_type: [
 
 			death_effects: "def(string type) -> commands [
 				spawn('explosion_big',mid_x,mid_y,facing),
-				sound('explode-mine.wav'),
+				play_sound__falloff('explode-mine.wav'),
 				spawn('explosion_spark_bright',mid_x,mid_y,facing),
 				spawn('particle_system_holder', mid_x, mid_y, 1, [
 					child.set_time_to_live( 2000 ), 
@@ -380,7 +380,7 @@ object_type: [
 								[
 									set(animation, 'on_back'),
 									cease_motion,
-									sound('mine-stick.wav'),
+									play_sound__falloff('mine-stick.wav'),
 									schedule(50, force_death())
 								]
 							)
@@ -390,7 +390,7 @@ object_type: [
 			handle_collision_with_hittable: "def(obj hittable collide_with, string collide_with_area) -> commands null",
 		},
 		
-		on_create: "[animation('spin'), sound('mine-beep.wav')]",
+		on_create: "[animation('spin'), play_sound__falloff('mine-beep.wav')]",
 		on_end_on_back_anim: "animation('on_back')",
 		on_process: "[if((mid_x < left_bound + 20) or (mid_x > right_bound -20),remove_object(me))]",
 		
