--- a/data/objects/enemies/bosses/gazer_boss.cfg
+++ b/data/objects/enemies/bosses/gazer_boss.cfg
@@ -156,7 +156,7 @@ properties: {
 		#------ fire shot ------#
 	spawn_scattershot_instance: "commands ::	[
 													spawn_scattershot('gazer_boss.scatter_shot', 300),
-													sound('wobbly-projectile'+1d3+'.wav'),
+													play_sound__falloff('wobbly-projectile'),
 												]
 													",
 	spawn_scattershot: "def(string shot_type, decimal shot_speed) -> commands [
@@ -322,7 +322,7 @@ properties: {
 	
 	fire_scattershot_shot: "commands ::	[
 											//Spawn the shot and effect.
-											sound('wobbly-projectile'+1d3+'.wav'),
+											play_sound__falloff('wobbly-projectile'),
 											spawn('gazer_boss.scatter_shot', shot_offset.x, shot_offset.y, {velocity_x: shot_velocity.x, velocity_y: shot_velocity.y}),
 											spawn('gazer_boss.scatter_shot_bloom', bloom_offset.x, bloom_offset.y, {rotate: rotate}),
 											
@@ -407,7 +407,7 @@ properties: {
 
 	fire_aimed_shockwave_shot: "commands ::	[ 
 									; spawn_large_shot('gazer_boss.shockwave_shot', 700, true),
-									sound('wobbly-projectile'+1d3+'.wav')
+									play_sound__falloff('wobbly-projectile')
 								]",
 
 	spawn_large_shot: "def(string shot_type, decimal shot_speed, bool use_aimed_rotation) -> commands [
@@ -775,7 +775,7 @@ properties: {
 											[schedule(1, [ ; child.fly_to([{x: lib.math.round(pos.x), y: lib.math.round(pos.y)}])])]
 										),
 									),
-									sound('gazer-boss-spawn-gazerlet'+1d4+'.wav'),
+									play_sound__falloff('gazer-boss-spawn-gazerlet'),
 								] where pos = mook_positions(number_of_mooks_to_spawn)[mook_num]
 	",
 
