--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -312,7 +312,7 @@ properties: {
 #---- lay egg ----#
 	should_lay_egg: "can_lay_egg_at_current_pos and (size(filter(level.chars, value.type in ['moth_boss.egg','moth_small'])) <= 1)",
 	lay_egg: "[	
-		sound('moth-boss-lay-egg'+1d5+'.wav'), schedule(timeout/2, 
+		play_sound__falloff('moth-boss-lay-egg), schedule(timeout/2, 
 			[spawn_egg(50 - 1d50)],
 		),
 		schedule_next_action
@@ -675,7 +675,7 @@ object_type: [
 			subshot_vel: "def(decimal angle_offset) -> {x: decimal, y: decimal} {x: subshot_speed * cos(angle_offset + shot_rotation), y: subshot_speed * sin(angle_offset + shot_rotation)}",
 			spawn_individual_subshot: "def(decimal angle_offset) -> commands spawn('moth_big.shot', subshot_offset(angle_offset).x, subshot_offset(angle_offset).y, {rotate: angle_offset, velocity_x: subshot_vel(angle_offset).x, velocity_y: subshot_vel(angle_offset).y})",
 
-			fire_subshots: "[sound('laser-raspberry.wav'), spawn_individual_subshot(-40), spawn_individual_subshot(-20), spawn_individual_subshot(0), spawn_individual_subshot(20), spawn_individual_subshot(40)]",
+			fire_subshots: "[play_sound__falloff('laser-raspberry.wav'), spawn_individual_subshot(-40), spawn_individual_subshot(-20), spawn_individual_subshot(0), spawn_individual_subshot(20), spawn_individual_subshot(40)]",
 
 		},
 		on_create: "[add_particles('particles'),schedule(50,die())]",
