--- a/data/objects/enemies/bugs/worm_jumping.cfg
+++ b/data/objects/enemies/bugs/worm_jumping.cfg
@@ -83,7 +83,7 @@ properties: {
 	_leaptime: { type: "int", default: 0 },
 },
 
-on_rustle: "sound('gravel-sift'+1d12+'.wav')", 
+on_rustle: "play_sound__falloff('gravel-sift')", 
 
 on_remove_segment: "if(last_segment != null, [remove_object(last_segment), last_segment.detach]) where last_segment = _last(filter(_segments, value in level.chars))",
 on_lose_segment: "if(last_segment != null, [last_segment.trigger_death, set(_segments, _segments[0: size(_segments)-1])]) where last_segment = _last(_segments)",
