--- a/data/objects/enemies/experimental/gazer_grey.cfg
+++ b/data/objects/enemies/experimental/gazer_grey.cfg
@@ -199,7 +199,7 @@ object_type: [
 		
 			death_effects: "def(string type) -> commands [
 					spawn('gazer_grey.shot_explode', mid_x, mid_y, facing),
-					sound('homingimpact.wav'), 
+					play_sound__falloff('homingimpact.wav'), 
 				]",
 		},
 		traction_in_air: 1000,
