--- a/data/objects/enemies/experimental/snodge_red.cfg
+++ b/data/objects/enemies/experimental/snodge_red.cfg
@@ -102,7 +102,7 @@ object_type: [
 		schedule_charge: "commands :: if(cycle - _last_started_attacking_player > delay_before_first_charge,
                                 [
                                     return_to_normal_anim,
-                                    sound('snodge-growl.wav'),
+                                    play_sound__falloff('snodge-growl.wav'),
                                     turn_towards_player,set(_last_started_attacking_player, cycle),
                                     schedule(charge_delay - 30, warn_flash_sequence),
                                     schedule(charge_delay, bind_command(def() consider_charge))
