--- a/data/objects/enemies/milgramen/kitty_ninja.cfg
+++ b/data/objects/enemies/milgramen/kitty_ninja.cfg
@@ -33,7 +33,7 @@ properties: {
 
 	fire_shuriken: "commands :: [
 									animation('shurikenFire'),
-									sound('weapon-swing-lighter'+1d2+'.wav'),
+									play_sound__falloff('weapon-swing-lighter'),
 									[
 										set(_last_toss,cycle),
 										spawn('kitty_ninja.shuriken', mid_x+20*facing, mid_y, {
@@ -97,7 +97,7 @@ properties: {
 	_last_toss: { type: "int", default: -100, persistent: false },
 },
 
-on_end_dash_anim: "if(abs(level.player.mid_x - self.mid_x) < 120 or facing != desired_facing, [animation('slash'),sound('weapon-swing-lightest'+1d7+'.wav')], animation('dash'))",
+on_end_dash_anim: "if(abs(level.player.mid_x - self.mid_x) < 120 or facing != desired_facing, [animation('slash'),play_sound__falloff('weapon-swing-lightest')], animation('dash'))",
 on_end_slash_anim: "animation('recovery')",
 on_end_turn_anim: "animation('stand')",
 on_end_stand_anim: "choose_action",
