--- a/data/objects/enemies/milgramen/kitty_sword.cfg
+++ b/data/objects/enemies/milgramen/kitty_sword.cfg
@@ -28,7 +28,7 @@ properties: {
 	description: "~A soldier eager to surpass the call of duty through sheer force of aggression.~",
 	taste: "~A wool sweater with a thin coat of whey protein.~",
 
-	play_object_specific_pain_vocalization: "def(DamageType damage_type, damage_amount) -> commands sound('cat-growl-ornery.wav')",
+	play_object_specific_pain_vocalization: "def(DamageType damage_type, damage_amount) -> commands play_sound__falloff('cat-growl-ornery.wav')",
 
 
 	posthit_invicibility_period: "100",
@@ -52,7 +52,7 @@ properties: {
 	knife_vel: "def(decimal angle_offset) -> {x: decimal, y: decimal} {x: knife_speed * cos(angle_offset + self.rotate - 90), y: knife_speed * sin(angle_offset + self.rotate - 90)}",
 	spawn_individual_knife: "def(decimal angle_offset) -> commands spawn('${type}.throwing_knife', knife_offset(angle_offset).x, knife_offset(angle_offset).y, {rotate: angle_offset, velocity_x: knife_vel(angle_offset).x, velocity_y: knife_vel(angle_offset).y})",
 
-	fire_knives: "[sound('weapon-swing-lightest'+1d7+'.wav'), spawn_individual_knife(-90 * facing), spawn_individual_knife(-70 * facing), spawn_individual_knife(-50 * facing), set(consecutive_knives_thrown,consecutive_knives_thrown+1)]",
+	fire_knives: "[play_sound__falloff('weapon-swing-lightest'), spawn_individual_knife(-90 * facing), spawn_individual_knife(-70 * facing), spawn_individual_knife(-50 * facing), set(consecutive_knives_thrown,consecutive_knives_thrown+1)]",
 
 	is_player_at_a_good_knifethrow_position: "(
 		consecutive_knives_thrown < 3 and
@@ -76,7 +76,7 @@ properties: {
 
 on_create: "[set_max_hitpoints({casual: 200 * 4, challenging: 200 * 7})]",
 
-on_there_is_a_guy_aiming_a_knife_right_at_you: "sound('knife-brandish1.wav')",
+on_there_is_a_guy_aiming_a_knife_right_at_you: "play_sound__falloff('knife-brandish1.wav')",
 
 on_bounced_on: "if(animation in ['lunge_unstuck', 'lunge_stuck'],
 					[get_hit_sourceless(enum impact,200), animation('spring'),sound_falloff('kitty-squish.wav')])",
@@ -113,10 +113,10 @@ on_end_walk_anim: "if((not facing_player),
   if(cycle > _can_attack_at and abs(level.player.mid_x - mid_x) < (300 + 1d200),
 
    if((1d4 = 1) or (abs(level.player.y - y) > 50),
-    [animation('enter_prepare_jump'),sound('cat-hiss.wav'),set(_began_energizing,cycle),set(consecutive_knives_thrown,0)],
+    [animation('enter_prepare_jump'),play_sound__falloff('cat-hiss.wav'),set(_began_energizing,cycle),set(consecutive_knives_thrown,0)],
     if( (1d5 = 5 and consecutive_knives_thrown < 4) or (is_player_at_a_good_knifethrow_position and consecutive_knives_thrown < 4),
 		[if(facing_player, set(facing, -facing)), animation('knife_toss')],
-		[animation('prepare_lunge'),sound('cat-hiss.wav'),set(_began_energizing,cycle)]
+		[animation('prepare_lunge'),play_sound__falloff('cat-hiss.wav'),set(_began_energizing,cycle)]
 	)
 	),
 if(distance_to_cliff < 80, [set(facing, -facing), animation('turn')], animation('walk'))))",
@@ -141,7 +141,7 @@ on_end_lunge_anim: "animation('lunge_attack')",
 on_end_prepare_lunge_anim: "if(cycle - _began_energizing > energize_duration,
 								[
 									animation('lunge'),
-									sound('weapon-swing-medium'+1d7+'.wav'),
+									play_sound__falloff('weapon-swing-medium'),
 									set(consecutive_knives_thrown,0),
 									set(_last_started_lunge_attack, level.cycle),
 								],
@@ -170,9 +170,9 @@ on_process_prepare_lunge: "if(player_too_close, begin_spin_attack)",
 on_process_prepare_jump: "if(player_too_close, begin_spin_attack)",
 
 #-------------------------- sound cues --------------------------#
-on_swordpull: "sound('sword-pull'+1d7+'.wav',1.0)",
-on_backpack_rustle: "sound('backpack-rustle'+1d3+'.wav')",
-on_spin_sound: "if(cycle - _last_played_spin_sound > 30, [set(_last_played_spin_sound, cycle), sound('sword-flurry.wav')])",
+on_swordpull: "play_sound__falloff('sword-pull')",
+on_backpack_rustle: "play_sound__falloff('backpack-rustle')",
+on_spin_sound: "if(cycle - _last_played_spin_sound > 30, [set(_last_played_spin_sound, cycle), play_sound__falloff('sword-flurry.wav')])",
 
 
 //,sound('weapon-swing-medium'+1d7+'.wav')                     
@@ -340,7 +340,7 @@ object_type: [
 			
 		},
 		timer_frequency: 200,
-		on_collide_level: "[sound('collide-knife.wav'),force_death()]",
+		on_collide_level: "[play_sound__falloff('collide-knife.wav'),force_death()]",
 		on_timer: "force_death()",
 		animation: [
 			{
