--- a/data/objects/enemies/milgramen/milgram_pod_launcher.cfg
+++ b/data/objects/enemies/milgramen/milgram_pod_launcher.cfg
@@ -46,7 +46,7 @@ properties: {
 #-------------------------- shooting behavior --------------------------#
 	_loading_time: "3",
 	shoot: "[
-		sound('Milgram-pod-spawn1.wav'),
+		play_sound__falloff('Milgram-pod-spawn1.wav'),
 		spawn('milgram_pod.thrown', midpoint_x+ facing*50, midpoint_y -50, {facing: facing, velocity_x:1000*facing, velocity_y:-1000, animation:'thrown'})
 	]",
 	
