--- a/data/objects/enemies/milgramen/milgram_slab.cfg
+++ b/data/objects/enemies/milgramen/milgram_slab.cfg
@@ -38,7 +38,7 @@ on_collide_side: "if(animation in ['walk'], [set(facing, -facing), set(velocity_
 on_end_dive_anim: "animation('fall')",
 on_end_fall_anim: "if(is_standing,[animation('land'),sound('milgram-slab-smash.wav',0.5)],animation('fall'))",
 on_end_land_anim: "animation('prone')",
-on_end_prone_anim: "[animation('getup'),schedule(10,sound('milgram-slab-lift.wav'))]",
+on_end_prone_anim: "[animation('getup'),schedule(10,play_sound__falloff('milgram-slab-lift.wav'))]",
 on_end_getup_anim: "animation('stand')",
 on_bounced_on: "if(is_invincible_posthit,null,
 					if(animation in ['getup','prone','land'],
@@ -52,7 +52,7 @@ on_change_animation_failure: "[resolve_solid(me,1,0), resolve_solid(me,-1,0), re
 solid_area: [10,10,42,40],
 solid_dimensions: ["enemy","common"],
 
-on_footfall: "[sound('footstep-medium-heavy'+1d10+'.wav', volume)] where volume = lib.math.constrain(0, 300.0/lib.math.length(self, level.player),1.0)",
+on_footfall: "play_sound__falloff('footstep-medium-heavy')",
 
 editor_info: {
 	category: "enemies, milgramen",
