--- a/data/objects/enemies/mushrooms/mushroom_bombardier.cfg
+++ b/data/objects/enemies/mushrooms/mushroom_bombardier.cfg
@@ -82,7 +82,7 @@ properties: {
 	
 	death_effects: "def(string type) -> commands [
 		spawn('explosion_enormous_harmful',midpoint_x,midpoint_y,facing),
-		sound('BombExplode.wav'),	
+		play_sound__falloff('BombExplode.wav'),	
 	]",
 },
 
