--- a/data/objects/enemies/mushrooms/mushroom_shooter_red.cfg
+++ b/data/objects/enemies/mushrooms/mushroom_shooter_red.cfg
@@ -107,7 +107,7 @@ object_type: [
 		object_level_collisions: true,
 		solid_dimensions: ["player"],
 		prototype: ["shot"],
-		on_create: "sound('mushroom-spore'+1d5+'.wav')",
+		on_create: "play_sound__falloff('mushroom-spore')",
 		properties: {
 			attack_damage: "if(higher_difficulty,2,1)",
 		},
