--- a/data/objects/enemies/mushrooms/mushroom_spore_puffer.cfg
+++ b/data/objects/enemies/mushrooms/mushroom_spore_puffer.cfg
@@ -36,7 +36,7 @@ on_end_recover_anim: "animation('normal')",
 
 
 on_shoot: "[
-		sound('Jellyfish-Spawn'+1d2+'.wav'),
+		play_sound__falloff('Jellyfish-Spawn'),
 		add_object(obj),
 		set(obj.velocity_y, 150*up),
 
