--- a/data/objects/props-interactive/hazards/crumbling_bricks.cfg
+++ b/data/objects/props-interactive/hazards/crumbling_bricks.cfg
@@ -19,14 +19,14 @@ on_process: "if(level.player.standing_on = me,
 					if(cycle%5=0 and 1d2=2,
 						[
 							spawn('bouncing_debris_chunk', mid_x, mid_y + (1d10), {facing: if(1d2=2,1,-1), debris_type: enum rock_big_cement, init_vel: enum fall_down} ),
-							sound('Rock-Crack'+1d6+'.wav')
+							play_sound__falloff('Rock-Crack')
 						]
 					)
 				]
 			)",
 
 on_die: "[
-			sound('blockbreak.ogg'),
+			play_sound__falloff('blockbreak.ogg'),
 			map(range(3d2), spawn('bouncing_debris_chunk', mid_x, mid_y + (1d10), {facing: if(1d2=2,1,-1), debris_type: enum rock_small_cement, init_vel: enum burst} )),
 			map(range(1d2), spawn('bouncing_debris_chunk', mid_x, mid_y + (1d10), {facing: if(1d2=2,1,-1), debris_type: enum rock_big_cement, init_vel: enum burst} )),
 		]",
