--- a/data/objects/props-interactive/hazards/falling_breakable_block.cfg
+++ b/data/objects/props-interactive/hazards/falling_breakable_block.cfg
@@ -2,7 +2,7 @@
 id: "falling_breakable_block",
 prototype: ["falling_harmful"],
 
-on_detach: "[proto_event('falling_harmful','detach'), sound('stalactite-detach'+1d4+'.wav')]",
+on_detach: "[proto_event('falling_harmful','detach'), play_sound__falloff('stalactite-detach')]",
 
 properties: {
 	death_fx_ignore_damage_type: "true",
