--- a/data/objects/props-interactive/locks/padlock.cfg
+++ b/data/objects/props-interactive/locks/padlock.cfg
@@ -2,6 +2,8 @@
 id: "padlock",
 zorder: "@include data/zorder.cfg:player",
 zsub_order: -10,
+prototype: ["standard_values"],
+
 
 properties: {
 	color: { type: "string", editor_info: { type: "enum", value:"'gold'", enum_values: ["gold", "silver", "green", "red", "purple", "blue", "cyan"] } },
@@ -25,10 +27,10 @@ on_load: "fire_event('create')",
 
 on_start_level: "[ if(level.player.get_stored_event(event_name) = 1, remove_object(me)), animation('normal')]",
 on_unlock: "[ level.player.store_event(event_name, 1),
-				impact_cloud(mid_x,mid_y,'large') where impact_cloud = def(int new_x, int new_y, string size) -> commands [if(size = 'small', spawn('impact_cloud_small',new_x,new_y,1), spawn('impact_cloud',new_x,new_y,1)),sound('bump-2.wav')],
+				impact_cloud(mid_x,mid_y,'large') where impact_cloud = def(int new_x, int new_y, string size) -> commands [if(size = 'small', spawn('impact_cloud_small',new_x,new_y,1), spawn('impact_cloud',new_x,new_y,1)),play_sound__falloff('bump-2.wav')],
 				map(range(1d2), spawn('bouncing_debris_chunk', midpoint_x + (10+1d5)*facing, midpoint_y - 1d10-5, {facing:facing, debris_type: enum metal_flat, init_vel: enum burst} )),
 				map(range(1d2), spawn('bouncing_debris_chunk', midpoint_x + (10+1d5)*facing, midpoint_y - 1d10-5, {facing:facing, debris_type: enum metal_round, init_vel: enum burst} )),
-				sound('blockbreak.ogg'),die()]",
+				play_sound__falloff('blockbreak.ogg'),die()]",
 no_compile_image: "props/locks.png",
 editor_info: {
 	category: "keys & triggers",
