--- a/data/objects/props-interactive/misc/brazier.cfg
+++ b/data/objects/props-interactive/misc/brazier.cfg
@@ -13,14 +13,14 @@ properties: {
 #-------------------------- pullable logic --------------------------#
 
 	visually_turn_on: " [
-							sound('click.wav'),
+							play_sound__falloff('click.wav'),
 							set(animation, 'pushed'),
 							add_object(burn_particles),
 							_fire_sound_loop.turn_on,
 							_fire_glow.turn_on,
 						]",
 	visually_turn_off: "[
-							sound('click.wav'),
+							play_sound__falloff('click.wav'),
 							set(animation, 'normal'),
 							remove_object(burn_particles),
 							_fire_sound_loop.turn_off,
