--- a/data/objects/props-interactive/misc/save_statue.cfg
+++ b/data/objects/props-interactive/misc/save_statue.cfg
@@ -59,7 +59,7 @@ properties: {
 	visually_activate: "[
 					_particles.turn_on,
 					add_object(_fire_glow),
-					sound('SaveFrog.ogg'),
+					lib.sound.play_sound(me,'SaveFrog.ogg'),
 				]",
 				
 	deactivate: "commands :: [
