--- a/data/objects/props-interactive/misc/soda_machine.cfg
+++ b/data/objects/props-interactive/misc/soda_machine.cfg
@@ -11,8 +11,8 @@ prototype: ["cosmetic_effects"],
 
 platform_area: [11,5,37,6],
 on_interact: "if(level.player.hitpoints < level.player.max_hitpoints and level.player.coins > 0, [
-		sound('insert-coin.ogg'),
-		schedule(50, sound('soda-vend.ogg')),
+		play_sound__falloff('insert-coin.ogg'),
+		schedule(50, play_sound__falloff('soda-vend.ogg')),
 		schedule(60, spawn('heart_object',level.player.midpoint_x,level.player.midpoint_y,1)), add(level.player.coins,-1),
 		fire_event(level.player, 'start_interact'),
 		schedule(60,fire_event(level.player, 'end_interact'))])",
