--- a/data/objects/props-interactive/misc/treasure_chest.cfg
+++ b/data/objects/props-interactive/misc/treasure_chest.cfg
@@ -1,5 +1,6 @@
 {
 id: "treasure_chest",
+prototype: ["standard_values"],
 zorder: "@include data/zorder.cfg:exterior_decor",
 is_strict: true,
 solid_dimensions: ["npc"],
@@ -28,7 +29,7 @@ properties: {
 
 on_create: "if(treasure_already_taken, animation('open'),animation('normal'))",
 on_interact: "[fire_event(frogatto, 'start_interact'),
-		if(locks, if(frogatto.swallowed_object != null and frogatto.swallowed_object is obj padlock_key, test_locks(frogatto.swallowed_object)), [animation('opening'),sound('DoorOpen.ogg')])] where frogatto = (obj frogatto_playable <- level.player)",
+		if(locks, if(frogatto.swallowed_object != null and frogatto.swallowed_object is obj padlock_key, test_locks(frogatto.swallowed_object)), [animation('opening'),play_sound__falloff('DoorOpen.ogg')])] where frogatto = (obj frogatto_playable <- level.player)",
 
 on_end_normal_anim: "animation('normal')",
 on_end_opening_anim: "[animation('open'),fire_event(level.player, 'end_interact'),fire_event('treasure_give')]",
