--- a/data/objects/props-interactive/npcs/prospera_npc.cfg
+++ b/data/objects/props-interactive/npcs/prospera_npc.cfg
@@ -16,10 +16,10 @@ on_end_emote_surprised_anim: "animation('emote_surprised2')",
 on_end_emote_surprised2_anim: "animation('emote_surprised3')",
 on_end_emote_surprised3_anim: "animation('stand')",
 
-on_decap: "sound('hat-take-off'+1d8+'.wav')",
-on_recap: "sound('hat-put-on'+1d6+'.wav')",
-on_uncross: "sound('uncross'+1d7+'.wav')",
-on_cross: "sound('cross'+1d7+'.wav')",
+on_decap: "play_sound__falloff('hat-take-off')",
+on_recap: "play_sound__falloff('hat-put-on')",
+on_uncross: "play_sound__falloff('uncross')",
+on_cross: "play_sound__falloff('cross')",
 
 on_end_emote_emphatic_anim: "animation('stand')",
 
