--- a/data/objects/props-interactive/npcs/town_elder_npc.cfg
+++ b/data/objects/props-interactive/npcs/town_elder_npc.cfg
@@ -3,8 +3,8 @@ id: "town_elder_npc",
 prototype: ["walking_npc"],
 solid_dimensions: [],
 solid_area: [10,10,27,43],
-on_caneland: "sound('cane-place'+1d3+'.wav')",
-on_shake: "sound('emote-whoosh-light'+1d4+'.wav')",
+on_caneland: "play_sound__falloff('cane-place')",
+on_shake: "play_sound__falloff('emote-whoosh-light')",
 
 properties: {
 #-------------------------- vars --------------------------#
