--- a/data/objects/props-interactive/obstacles/fungus_bracket_springy.cfg
+++ b/data/objects/props-interactive/obstacles/fungus_bracket_springy.cfg
@@ -54,8 +54,8 @@ on_process: "[ if(_magnitude > 0.5, set(_magnitude, _magnitude*0.98), set(_magni
 if(_magnitude > 0,set(custom_draw, converted_custom_draw_params) )]",
 
 
-on_jumped_on: "[sound('mushroom-bounce'+1d3+'.wav')]",
-on_bounced_on: "[sound('mushroom-bounce'+1d3+'.wav'),set(_magnitude,25)]",
+on_jumped_on: "[play_sound__falloff('mushroom-bounce')]",
+on_bounced_on: "[play_sound__falloff('mushroom-bounce'),set(_magnitude,25)]",
 editor_info: {
 	category: "props",
 },
