--- a/data/objects/props-interactive/obstacles/metal_spring.cfg
+++ b/data/objects/props-interactive/obstacles/metal_spring.cfg
@@ -9,9 +9,9 @@ properties: {
 	spring_amount: 3500,
 	material_sound: "enum medium_metal",
 },
-on_jumped_on: "[animation('spring'),sound('spring.wav')]",
+on_jumped_on: "[animation('spring'),play_sound__falloff('spring.wav')]",
 on_end_anim: "animation('normal')",
-on_bounced_on: "[animation('spring'),sound('spring.wav')]",
+on_bounced_on: "[animation('spring'),play_sound__falloff('spring.wav')]",
 editor_info: {
 	category: "props",
 },
