--- a/data/objects/props-interactive/platforms/falling_platform.cfg
+++ b/data/objects/props-interactive/platforms/falling_platform.cfg
@@ -19,9 +19,9 @@ properties: {
 	_last_played_creak_sfx:  { type: "decimal", default: 0, persistent: false },
 },
 
-on_die: "sound('delayed-splash.wav')",
-on_oh_snap: "if((_done_broke) = false, [sound('bridge-post-break.wav'),set(_done_broke, true)])",
-on_creak: "if(cycle >= (_last_played_creak_sfx + 28) or _last_played_creak_sfx = 0, [sound('bridge-creak'+1d3+'.wav'),set(_last_played_creak_sfx,cycle)])",
+on_die: "play_sound__falloff('delayed-splash.wav')",
+on_oh_snap: "if((_done_broke) = false, [play_sound__falloff('bridge-post-break.wav'),set(_done_broke, true)])",
+on_creak: "if(cycle >= (_last_played_creak_sfx + 28) or _last_played_creak_sfx = 0, [play_sound__falloff('bridge-creak'),set(_last_played_creak_sfx,cycle)])",
 on_process: "[
 		if(abs(_tilt) > 8, fire_event('oh_snap')),
 	   if(abs(_tilt) > 90, die()),
