--- a/data/objects/props-interactive/portals/seaside_house_bookshelf_secret_passage.cfg
+++ b/data/objects/props-interactive/portals/seaside_house_bookshelf_secret_passage.cfg
@@ -3,12 +3,12 @@ id: "seaside_house_bookshelf_secret_passage",
 dies_on_inactive: false,
 zorder: "@include data/zorder.cfg:interior_decor",
 
-#on_interact="[if(cycle > 20,sound('DoorOpen.ogg')),animation('open'),fire_event(level.player, 'start_interact')]"
+#on_interact="[if(cycle > 20,play_sound__falloff('DoorOpen.ogg')),animation('open'),fire_event(level.player, 'start_interact')]"
 #on_enter="[if(dest_level and dest_door, teleport(dest_level, dest_door, 'iris'))]"
 on_end_open_anim: "animation('ajar')",
 on_end_normal_anim: "animation('normal')",
 on_end_ajar_anim: "animation('ajar')",
-on_open: "[sound('DoorOpen.ogg'),animation('open')]",
+on_open: "[play_sound__falloff('DoorOpen.ogg'),animation('open')]",
 platform_area: [10,22,48,23],
 prototype: ["cosmetic_effects"],
 editor_info: {
