--- a/data/objects/props-interactive/portals/wood_door_titlescreen.cfg
+++ b/data/objects/props-interactive/portals/wood_door_titlescreen.cfg
@@ -1,7 +1,7 @@
 {
 id: "wood_door_titlescreen",
 prototype: ["door"],
-//on_interact: "[if(cycle > 20,sound('DoorOpen.ogg')),animation('open'),fire_event(level.player, 'start_interact')]",
+//on_interact: "[if(cycle > 20,play_sound__falloff('DoorOpen.ogg')),animation('open'),fire_event(level.player, 'start_interact')]",
 animation: [
 	{
 		"@base": true,
