--- a/data/objects/props-interactive/throwables/thunder_melon.cfg
+++ b/data/objects/props-interactive/throwables/thunder_melon.cfg
@@ -10,7 +10,7 @@ properties: {
 	description: "~Do not surprise.~",
 	taste: "~And I thought the purple berries tasted like burning.~",
 
-	explode: "[sound('thunder-melon-explode.wav'), spawn('explosion_big_harmful',mid_x,mid_y,facing), die()]",
+	explode: "[play_sound__falloff('thunder-melon-explode'), spawn('explosion_big_harmful',mid_x,mid_y,facing), die()]",
 	
 	do_level_collision: "def(any collide_with) -> commands if(collide_with is obj hittable, if(collide_with.team != team, explode))"
 },
