--- a/data/objects/props/furniture/wooden_bed.cfg
+++ b/data/objects/props/furniture/wooden_bed.cfg
@@ -18,8 +18,8 @@ properties: {
 },
 
 on_bounced_on: "[
-	sound('bed-jump'+1d4+'.wav'),
-	sound('footstep-jump-padding'+1d7+'.wav'),
+	play_sound__falloff('bed-jump'),
+	play_sound__falloff('footstep-jump-padding'),
 	trigger_squish_animation(1.0),
 ]",
 	
