--- a/data/objects/props/utilities/ceiling_lamp.cfg
+++ b/data/objects/props/utilities/ceiling_lamp.cfg
@@ -64,7 +64,7 @@ on_enter_normal_anim: "[
 ]",
 
 on_flicker: "[
-	sound('light-flicker'+1d5+'.wav'),
+	play_sound__falloff('light-flicker'),
 	set(light_circular.scale, 0.15 + 1d0.025),
 	set(light_cone.scale, 0.9 + 1d0.05),
 	set(light_cone.brightness, 25 + 1d100),
