--- a/data/objects/enemies/bugs/hopper_armored.cfg
+++ b/data/objects/enemies/bugs/hopper_armored.cfg
@@ -13,7 +13,7 @@ properties: {
 	
 	/*---------------- overriding hittable behavior ----------------*/
 	armor: "if(animation='turtled',500,0)",
-	handle_special_damage_response: "def(DamageType damage_type, int final_damage_amount, bool will_die) -> commands if(armor > 0, sound('hopper-block1.wav'))",
+	handle_special_damage_response: "def(DamageType damage_type, int final_damage_amount, bool will_die) -> commands if(armor > 0, play_sound__falloff('hopper-block1.wav'))",
 	hurt_velocity_y: "0",
 	hurt_velocity_x: "0",
 	handle_base_damage_reductions: "def(int amount) -> int if(animation = 'cooloff', amount, amount/10)",
@@ -36,7 +36,7 @@ properties: {
 
 	shoot_plasma: "[set(_last_fired, level.cycle),
 			add(velocity_x, -70*facing), add(velocity_y, -800),
-			sound('fireball-enemy.wav'),
+			play_sound__falloff('fireball-enemy.wav'),
 			spawn('hopper_armored.shot',mid_x+20*facing,mid_y,1,[set(child.velocity_x,xVel),set(child.velocity_y,yVel),set(child.rotate,lib.math.angle(me,level.player))]),
 			spawn('hopper_armored.shot_bloom',mid_x,mid_y,facing,[set(child.zorder,me.zorder+1)])
 			] 
@@ -49,7 +49,7 @@ properties: {
 	being_stood_on: "(size(filter(level.chars, me = value.standing_on)) > 0)",
 	
 	
-	play_jump_sound: "if(should_play_sound, [sound('backflip-whirl-short.wav'),set(_last_played_sound,level.cycle)])
+	play_jump_sound: "if(should_play_sound, [play_sound__falloff('backflip-whirl-short.wav'),set(_last_played_sound,level.cycle)])
 				where should_play_sound = [if(level.cycle - _last_played_sound > 100,1,0)]",
 	play_jump_sound_at_apex: "[if(sign(_prev_vel_y) = -1 and sign(velocity_y) = 1, play_jump_sound),  set(_prev_vel_y, velocity_y)]",
 
@@ -86,9 +86,9 @@ on_end_anim: "[switch(animation,
 							
 							,control_brightness]",
 
-on_bounced_on: "[if(animation in ['turtled'],sound('hopper-block1.wav'),sound('bug-bounce.wav')),if(not animation in ['cooloff','turtled'],animation('spring'))]",
+on_bounced_on: "[if(animation in ['turtled'],play_sound__falloff('hopper-block1.wav'),play_sound__falloff('bug-bounce.wav')),if(not animation in ['cooloff','turtled'],animation('spring'))]",
 on_process_hop: "[if(should_shoot, shoot_plasma), control_brightness]",
-on_collide_feet: "if(needs_to_recover, [animation('cooloff'),sound('Hopper-Clumsy-Thump'+1d3+'.wav')],animation('stand'))",
+on_collide_feet: "if(needs_to_recover, [animation('cooloff'),play_sound__falloff('Hopper-Clumsy-Thump')],animation('stand'))",
 on_collide_head: "[if(past_shooting_interval, shoot_plasma),set(velocity_y,velocity_y/2)]",
 on_enter_walk_anim: "",
 on_process_stand: "",
