--- a/data/objects/enemies/incorporeal/orloff.cfg
+++ b/data/objects/enemies/incorporeal/orloff.cfg
@@ -21,10 +21,10 @@ properties: {
 	_y_bound: { type: "int", editor_info: { type: "y", value: "y-150" } },
 	_y2_bound: { type: "int", editor_info: { type: "y", value: "y+150" } },
 	
-	play_object_specific_pain_vocalization: "def(DamageType damage_type, damage_amount) -> commands sound('orloff-hurt.wav')",
+	play_object_specific_pain_vocalization: "def(DamageType damage_type, damage_amount) -> commands play_sound__falloff('orloff-hurt.wav')",
 	
 	shot_speed: "600",
-	shoot: "[sound('laser.ogg'), 
+	shoot: "[play_sound__falloff('laser.ogg'), 
 	spawn('orloff.shot', mid_x, mid_y,{velocity_x: xVel,velocity_y: yVel})
 		where xVel = (shot_speed*cos(lib.math.angle(me,level.player)))
 		where yVel = (shot_speed*sin(lib.math.angle(me,level.player))),
@@ -54,8 +54,8 @@ on_end_waiting_anim: "[
 		if(triggered, 
 			set(animation, 'disturbed'))
 			]",
-on_end_disturbed_anim: "[set(animation,'spawn1'),sound('gravel-rustle6.wav'),set(last_fired,cycle)]",
-on_end_spawn1_anim: "[set(animation, 'spawn2'), sound('orloff-appear.wav')]",
+on_end_disturbed_anim: "[set(animation,'spawn1'),play_sound__falloff('gravel-rustle6.wav'),set(last_fired,cycle)]",
+on_end_spawn1_anim: "[set(animation, 'spawn2'), play_sound__falloff('orloff-appear.wav')]",
 on_end_spawn2_anim: "[set(animation,'chargeup'),
 			schedule(30, set(animation,'shoot')),
 			schedule(32, fire_event('shoot')), 
@@ -73,7 +73,7 @@ on_shoot: "shoot",
 
 on_process: "[ 
 	if(not triggered and  level.player.midpoint_x > _x_bound and level.player.midpoint_x < _x2_bound  and level.player.midpoint_y > _y_bound and level.player.midpoint_y < _y2_bound and cycle - last_triggered > 250, 
-		[fire_event('triggered'),sound('orloff-open.wav'), schedule(12, sound('orloff-open.wav')), schedule(24, sound('orloff-open.wav')),set(last_triggered,cycle)]
+		[fire_event('triggered'),play_sound__falloff('orloff-open.wav'), schedule(12, play_sound__falloff('orloff-open.wav')), schedule(24, play_sound__falloff('orloff-open.wav')),set(last_triggered,cycle)]
 		),
 	if(self.hitpoints <= 0, set(animation,'death')),
 
