--- a/data/objects/enemies/milgramen/bunny_ball_tosser.cfg
+++ b/data/objects/enemies/milgramen/bunny_ball_tosser.cfg
@@ -45,7 +45,7 @@ on_end_throw_anim: "[set(_charge_counter, 0), set(animation, 'stand')]",
 on_end_hurt_anim: "animation('normal')",
 on_launch_ball: "spawn('bunny_ball_tosser.thrown_metal_ball', midpoint_x, y, facing, [set(child.velocity_x, -facing*600-1d200),set(child.velocity_y, -400)])",
 
-on_whoosh: "sound('weapon-swing-hard'+1d3+'.wav')",
+on_whoosh: "play_sound__falloff('weapon-swing-hard')",
 
 solid_area: [20,18,42,56],
 editor_info: {
