--- a/data/objects/enemies/mushrooms/mushroom_jellyfish_spawner.cfg
+++ b/data/objects/enemies/mushrooms/mushroom_jellyfish_spawner.cfg
@@ -49,7 +49,7 @@ on_end_shoot_anim: "animation('normal')",
 
 
 on_shoot: "[
-		sound('Jellyfish-Spawn'+1d2+'.wav'),
+		play_sound__falloff('Jellyfish-Spawn'),
 		add_object(obj),
 		set(obj.velocity_y, 500*up),
 
