--- a/data/objects/enemies/plants/shooting_plant.cfg
+++ b/data/objects/enemies/plants/shooting_plant.cfg
@@ -26,7 +26,7 @@ properties: {
 			angle = 45*self.facing, //Something needs to be jiggered for this to work at different angles.
 			x = tgt[0]-(midpoint_x+20*facing),
 			y = (midpoint_y-12)-tgt[1]",
-	shoot_unaimed: "commands :: [sound('pollen-shot.wav'),spawn('shooting_plant.pollen_ball', midpoint_x+20*facing, midpoint_y-12, facing, [set(child.velocity_x, 300*facing), set(child.velocity_y, -500)])]",
+	shoot_unaimed: "commands :: [play_sound__falloff('pollen-shot.wav'),spawn('shooting_plant.pollen_ball', midpoint_x+20*facing, midpoint_y-12, facing, [set(child.velocity_x, 300*facing), set(child.velocity_y, -500)])]",
 	springiness: "160",
 },
 
@@ -136,7 +136,7 @@ object_type: [
 			properties: {
 				death_effects: "def(string type) -> commands [
 					spawn('pollen_impact_particle',mid_x,mid_y,0),
-					sound('Seed-fall'+1d4+'.wav')
+					play_sound__falloff('Seed-fall')
 				]",
 			},
 
