--- a/data/objects/enemies/plants/spitting_flower.cfg
+++ b/data/objects/enemies/plants/spitting_flower.cfg
@@ -117,7 +117,7 @@ object_type: [
 		properties: {
 			death_effects: "def(string type) -> commands [
 				spawn('pollen_impact_particle',mid_x,mid_y,0),
-				sound('Seed-fall'+1d4+'.wav')
+				play_sound__falloff('Seed-fall')
 			]",
 		},
 
