--- a/data/objects/gui-components/inventory-screen/inventory_pane.cfg
+++ b/data/objects/gui-components/inventory-screen/inventory_pane.cfg
@@ -177,7 +177,7 @@ object_type: [
 				)",
 			
 			update_selected_item_text: "def(obj inventory_pane.item_anchor selected_obj) -> commands
-				[	sound('inventory-select'+1d6+'.wav'),
+				[	lib.sound.play_sound(me, 'inventory-select'),
 					parent.text_name_display.set_text(item_name),
 					parent.text_description_display.set_text(parent.wrapped(item_desc, 52)),
 					change_animation(item_info.item_category),
@@ -190,7 +190,7 @@ object_type: [
 			",
 			
 			activate: "def() -> commands if(selected_object,
-				[selected_object.activate, sound('inventory-activate'+1d4+'.wav')]
+				[selected_object.activate, lib.sound.play_sound(me, 'inventory-activate')]
 			)",
 			
 			/*
