--- a/data/objects/props-interactive/misc/save_toilet.cfg
+++ b/data/objects/props-interactive/misc/save_toilet.cfg
@@ -1,11 +1,12 @@
 {
 id: "save_toilet",
+prototype: ["standard_values"],
 collide_dimensions: ["~player"],
 dies_on_inactive: false,
 zorder: "@include data/zorder.cfg:exterior_decor",
 
-#on_interact="[if(cycle > 20,sound('DoorOpen.ogg')),animation('open')]"
-on_interact: "[sound('DoorOpen.ogg'), animation('open_door'), fire_event(level.player, 'start_interact')]",
+#on_interact="[if(cycle > 20,play_sound__falloff('DoorOpen.ogg')),animation('open')]"
+on_interact: "[play_sound__falloff('DoorOpen.ogg'), animation('open_door'), fire_event(level.player, 'start_interact')]",
 on_talk: "[
 	       animation('close_door'),
 	              fire_event(level.player, 'end_interact'),
