--- a/data/objects/props-interactive/misc/teleport_pedestal.cfg
+++ b/data/objects/props-interactive/misc/teleport_pedestal.cfg
@@ -54,7 +54,7 @@ properties: {
 
 on_jumped_on: "if(_dest_door and cycle > 100, [
 	if(animation != 'glow', [
-		sound('teleporter-warmup.wav'),
+		play_sound__falloff('teleporter-warmup.wav'),
 		animation('glow')
 	]),
 	set(_last_stood_on, cycle)
@@ -69,7 +69,7 @@ on_transported: "[
 	if(_dest_door, [
 		screen_flash([255,255,255,255], [0,0,0,-5], 50),
 		teleport(if(_dest_level and _dest_level != level.id, _dest_level,null), _dest_door,'instant'),
-		sound('teleport.wav')
+		lib.sound.play_sound(me,'teleport.wav')
 	])
 ]",
 
