--- a/data/objects/props-interactive/misc/world_map_pedestal.cfg
+++ b/data/objects/props-interactive/misc/world_map_pedestal.cfg
@@ -56,7 +56,7 @@ properties: {
 
 on_jumped_on: "if(cycle > 20, [
 	if(animation != 'glow', [
-		sound('teleporter-warmup.wav'),
+		play_sound__falloff('teleporter-warmup.wav'),
 		animation('glow'),
 	]), 
 	set(_last_stood_on, cycle),
@@ -71,7 +71,7 @@ on_transported: "[
 	//TODO: Add spawn()-like syntax for spawn_player(), so the following would work: spawn_player('map_selector', 0, 0, {_player: level.player, _came_from_level:level.id}),
 	spawn_player('map_selector', 0, 0, 1, [set(child._player, level.player), set(child._came_from_level, level.id)]),
 	teleport('main-map.cfg','','instant'),
-	sound('teleport.wav'),
+	lib.sound.play_sound(me,'teleport.wav'),
 	screen_flash([255,255,255,255], [0,0,0,-5], 50),
 ]",
 
