--- a/data/objects/props-interactive/npcs/kitty_sword_npc.cfg
+++ b/data/objects/props-interactive/npcs/kitty_sword_npc.cfg
@@ -41,9 +41,9 @@ on_end_raiseBroken_anim: "[set(_animation_counter, 3),animation('raiseBlinkBroke
 on_end_raiseBlinkBroken_anim: "if(_animation_counter > 0, [set(_animation_counter, _animation_counter - 1),animation('raiseBlinkBroken')], schedule(10,animation('lowerBroken')))",
 
 #-------------------------- special effects --------------------------#
-on_enter_extend_sword_anim: "[spawn('metal_specular_sparkle', midpoint_x+64*facing, midpoint_y,facing),sound('sword-draw'+1d2+'.wav')]",
+on_enter_extend_sword_anim: "[spawn('metal_specular_sparkle', midpoint_x+64*facing, midpoint_y,facing),play_sound__falloff('sword-draw')]",
 
-on_shatter: "[map(range(5), spawn('bouncing_debris_chunk', midpoint_x + (50+1d5)*facing, midpoint_y - 1d10-5, {facing:facing, debris_type: enum ceramic, init_vel: enum burst} )),sound('SwordBreak.ogg')]",
+on_shatter: "[map(range(5), spawn('bouncing_debris_chunk', midpoint_x + (50+1d5)*facing, midpoint_y - 1d10-5, {facing:facing, debris_type: enum ceramic, init_vel: enum burst} )),play_sound__falloff('SwordBreak.ogg')]",
 
 on_footfall: "sound_falloff('kitty-footstep'+1d10+'.wav',300,1.0)",
 
