--- a/data/objects/props-interactive/platforms/dungeon_platform_stationary_rotating_5wide.cfg
+++ b/data/objects/props-interactive/platforms/dungeon_platform_stationary_rotating_5wide.cfg
@@ -49,7 +49,7 @@ on_process: "[  do_sliding,
 
 
 #deliberate 2 frame grace period.
-on_tilt: "[sound('metal-platform-rotate'+1d2+'.wav'),animation('turning'),schedule(2,set(platform_area, []))]",
+on_tilt: "[play_sound__falloff('metal-platform-rotate'),animation('turning'),schedule(2,set(platform_area, []))]",
 
 animation: [
 	{
