--- a/data/objects/props-interactive/portals/dungeon_save_door.cfg
+++ b/data/objects/props-interactive/portals/dungeon_save_door.cfg
@@ -2,7 +2,8 @@
 id: "dungeon_save_door",
 dies_on_inactive: false,
 zorder: "@include data/zorder.cfg:interior_decor",
-on_interact: "[sound('DoorOpen.ogg'), animation('open'), fire_event(level.player, 'start_interact')]",
+prototype: ["standard_values"],
+on_interact: "[play_sound__falloff('DoorOpen.ogg'), animation('open'), fire_event(level.player, 'start_interact')]",
 on_talk: "[
 	       animation('close'),
 	              fire_event(level.player, 'end_interact'),
