Changed our bouncing-debris-chunk object over to the new sound system.  We had to rename some sounds because the new system searches based on a 'root' name, so we could no longer have names that are a pure subset of another name.

--- a/data/objects/effects/attaches/bouncing_debris_chunk.cfg
+++ b/data/objects/effects/attaches/bouncing_debris_chunk.cfg
@@ -123,21 +123,21 @@ properties: {
 				)",
 				
 	play_sound:	"commands :: switch(sound_type,
-							enum bone,						sound('clatter-bone'+1d10+'.wav',0.8),
-							enum metal,						sound('Collide-Metal'+1d10+'.wav',0.8),
-							enum metal_medium,				sound('collide-metal-medium'+1d9+'.wav',0.5),
-							enum wooden,					sound('collide-wood'+1d10+'.wav'),
-							enum wooden_hollow,				sound('collide-wood-hollow'+1d30+'.wav',0.22),
-							enum wooden_big,				sound('collide-wood-large'+1d11+'.wav',0.22),
-							enum stone,						sound('gravel-bounce'+1d20+'.wav', 0.7),
-							enum stone_big,					sound('Collide-Rock'+1d8+'.wav',0.8),
-							enum ceramic,					sound('collide-ceramic'+1d12+'.wav',0.8),
-							enum ceramic_small,				sound('collide-ceramic-small'+1d21+'.wav'),
+							enum bone,						play_sound__falloff('clatter-bone',{max_volume: 0.8}),
+							enum metal,						play_sound__falloff('Collide-Metal',{max_volume: 0.8}),
+							enum metal_medium,				play_sound__falloff('collide-metal-medium',{max_volume: 0.5}),
+							enum wooden,					play_sound__falloff('collide-wood-normal'),
+							enum wooden_hollow,				play_sound__falloff('collide-wood-hollow',{max_volume: 0.22}),
+							enum wooden_big,				play_sound__falloff('collide-wood-large',{max_volume: 0.22}),
+							enum stone,						play_sound__falloff('gravel-bounce', {max_volume: 0.7}),
+							enum stone_big,					play_sound__falloff('Collide-Rock', {max_volume: 0.8}),
+							enum ceramic,					play_sound__falloff('collide-ceramic', {max_volume: 0.8}),
+							enum ceramic_small,				play_sound__falloff('collide-ceramic-small',{max_volume: 0.8}),
 							enum electric,					null,
 							enum arcane,					null,
-							enum bramble,					sound('collide-bramble'+1d47+'.wav'),
-							enum bark,						lib.sound.play_sound(me, 'collide-bark-big'),
-															sound('Collide-Rock'+1d8+'.wav',0.8)
+							enum bramble,					play_sound__falloff('collide-bramble'),
+							enum bark,						play_sound__falloff('collide-bark-big'),
+															play_sound__falloff('Collide-Rock',{max_volume: 0.8})
 				)",
 				
 	animation_for_material: "def(debris_type) -> string
