Reworked the bouncing object sounds to also use the new audio subsystem.  Removed a debug line in padlock_key.

--- a/data/object_prototypes/base/cosmetic_effects.cfg
+++ b/data/object_prototypes/base/cosmetic_effects.cfg
@@ -540,13 +540,13 @@
 	custom_impact_sound: "string|null :: null",
 	play_impact_sound: "commands :: if(custom_impact_sound != null, sound_attenuated_by_speed(custom_impact_sound), 
 							switch(material_sound,
-								enum cannon_ball,		sound_attenuated_by_speed('metal-ball-bounce'+1d3+'.wav'), 
-								enum thick_metal,		sound_attenuated_by_speed('metal-slam'+1d2+'.wav'), //i.e. airplane bombs - originally 0.6 vol
-								enum small_metal,		sound_attenuated_by_speed('Collide-Metal'+1d10+'.wav'),	 //i.e. keys
-								enum medium_metal,		sound_attenuated_by_speed('collide-metal-heavy'+1d7+'.wav'),
-								enum coconut,			sound_attenuated_by_speed('hopper-block1.wav'),
-								enum fruit,				sound_attenuated_by_speed('collide-fruit'+1d3+'.wav'),
-								enum wood_crate,		sound_attenuated_by_speed('collide-wood-crate'+1d7+'.wav'),
+								enum cannon_ball,		sound_attenuated_by_speed('metal-ball-bounce'), 
+								enum thick_metal,		sound_attenuated_by_speed('metal-slam'), //i.e. airplane bombs - originally 0.6 vol
+								enum small_metal,		sound_attenuated_by_speed('collide-metal-normal'),	 //i.e. keys
+								enum medium_metal,		sound_attenuated_by_speed('collide-metal-heavy'),
+								enum coconut,			sound_attenuated_by_speed('hopper-block'),
+								enum fruit,				sound_attenuated_by_speed('collide-fruit'),
+								enum wood_crate,		sound_attenuated_by_speed('collide-wood-crate'),
 														sound_attenuated_by_speed('bump-2.wav')
 							))",
 
