--- a/data/object_prototypes/base/standard_values.cfg
+++ b/data/object_prototypes/base/standard_values.cfg
@@ -162,7 +162,10 @@ properties: {
 	
 	sound_attenuated_by_speed: "def(string sound_file, decimal max_speed=1200.0) -> commands
 										//the max_speed is baked-in here, but it's fairly well-tuned for the stuff this function gets used on (dropping chunks of stuff)
-									sound_falloff(sound_file, 300, lib.math.ease_in_quad( lib.math.constrain(0.0, speed/max_speed, 1.0) ))",
+									play_sound__falloff(sound_file, {
+										falloff_dist: 300,
+										max_volume: lib.math.ease_in_quad( lib.math.constrain(0.0, speed/max_speed, 1.0) ),
+									})",
 	
 	standard_victory_music: "commands :: execute(level.player, [
 									sinusoidal_music_volume_transition(50, 90, 90, 0, 1),
