--- a/data/objects/effects/attaches/bouncing_debris_chunk.cfg
+++ b/data/objects/effects/attaches/bouncing_debris_chunk.cfg
@@ -124,14 +124,14 @@ properties: {
 				
 	play_sound:	"commands :: switch(sound_type,
 							enum bone,						play_sound__falloff('clatter-bone',{max_volume: 0.8}),
-							enum metal,						play_sound__falloff('Collide-Metal',{max_volume: 0.8}),
+							enum metal,						play_sound__falloff('collide-metal-normal',{max_volume: 0.8}),
 							enum metal_medium,				play_sound__falloff('collide-metal-medium',{max_volume: 0.5}),
 							enum wooden,					play_sound__falloff('collide-wood-normal'),
 							enum wooden_hollow,				play_sound__falloff('collide-wood-hollow',{max_volume: 0.22}),
 							enum wooden_big,				play_sound__falloff('collide-wood-large',{max_volume: 0.22}),
 							enum stone,						play_sound__falloff('gravel-bounce', {max_volume: 0.7}),
 							enum stone_big,					play_sound__falloff('Collide-Rock', {max_volume: 0.8}),
-							enum ceramic,					play_sound__falloff('collide-ceramic', {max_volume: 0.8}),
+							enum ceramic,					play_sound__falloff('collide-ceramic-normal', {max_volume: 0.8}),
 							enum ceramic_small,				play_sound__falloff('collide-ceramic-small',{max_volume: 0.8}),
 							enum electric,					null,
 							enum arcane,					null,
