--- a/data/objects/props-interactive/locks/padlock_key.cfg
+++ b/data/objects/props-interactive/locks/padlock_key.cfg
@@ -112,7 +112,7 @@ properties: {
 	restore_within_current_level: "commands :: [
 									set(alpha, 0),
 									set(me.mid_xy, [original_position.x, original_position.y]),
-									level.player.observe_and_trigger_points_of_interest([me], true, dump(if(came_from_another_level_for_cutscene, false, true)), fire_event(me, 'finish_cutscene'))
+									level.player.observe_and_trigger_points_of_interest([me], true, if(came_from_another_level_for_cutscene, false, true), fire_event(me, 'finish_cutscene'))
 								]",
 
 	visually_reappear: "commands :: [
